# sql-analyst

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt  seed_data.sql
app/: database.py  environment.py  main.py  models.py
app/graders/: base.py  task_easy.py  task_hard.py  task_medium.py
app/tasks/: registry.py
scripts/: generate_db.py  validate-submission.sh
server/: app.py
